<resources>
    <string name="app_name">LayoutApplication</string>
    <string name="sara_bellum">SARA BELLUM</string>
    <string name="about">ABOUT</string>
    <string name="about_details">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 150.</string>
    <string name="d_o_b">D.O.B</string>
    <string name="time">Time</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="blood_group">Blood Group</string>
    <string name="hobbies">Hobbies</string>
    <string name="education">Education</string>
    <string name="language">Language</string>
    <string name="date_info">25/10/1995</string>
    <string name="time_info">9:10 PM</string>
    <string name="age_info">25 Years</string>
    <string name="weight_info">61 kg</string>
    <string name="height_info">5\'6</string>
    <string name="blood_group_info">B+</string>
    <string name="photography">Photography</string>
    <string name="education_info">M.B.A</string>
    <string name="english_hindi">English, Hindi</string>
    <string name="contact">CONTACT</string>
    <string name="call">Call</string>
    <string name="phone_info">+91 9129191919</string>
    <string name="address">Address</string>
    <string name="address_info">13th Baker Street</string>
    <string name="family">FAMILY</string>
    <string name="family_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, consectetur adipiscing elit, sed do eiusmod tempor tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dol Excepteur sin.</string>
    <string name="expectations">EXPECTATIONS</string>
    <string name="expectation_info">Lorem ipsum dolor sit amet, consectetur scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint .</string>
    <string name="heading">24 Years (28/10/1996)</string>
    <string name="profile_image">profile image</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="email_info">abracadabra@gmail.com</string>
    <string name="cast">CAST</string>
    <string name="cast_info">Unknown</string>
    <string name="native_place">NATIVE PLACE</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="family_background">FAMILY BACKGROUND</string>
    <string name="location">ADDRESS</string>
    <string name="father_name">Father Name</string>
    <string name="place">Place</string>
    <string name="last_name">TONDON</string>
    <string name="contact_no">Contact No</string>
    <string name="elder_brother">Elder Brother</string>
    <string name="geeky_show">geeky show</string>
    <string name="dummy_text">lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="income">Income</string>
    <string name="occupation">Occupation</string>
    <string name="post_graduation">Post Graduation</string>
    <string name="graduation">Graduation</string>
    <string name="about_him">About him</string>
    <string name="country">Country</string>
    <string name="astro_details">Astro Details</string>
    <string name="profile_portfolio">Profile Portfolio</string>
    <string name="name_for_boy">Chetan Arora</string>
    <string name="textTitle">Hello popup</string>
</resources>