<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="7dp">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/faded_yellow"
        android:padding="10dp">


        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/hortonregular"
            android:text="@string/sara_bellum"
            android:textColor="@color/dark_brown"
            android:textSize="24sp" />

        <TextView

            android:id="@+id/tvProfile"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFullName"
            android:layout_margin="5dp"
            android:background="@color/dark_brown"
            android:fontFamily="@font/hortonregular"
            android:padding="2dp"
            android:text="@string/personal_details"
            android:textAllCaps="true"
            android:textColor="@color/faded_yellow"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDOB"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvProfile"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:text="@string/d_o_b"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView

            android:id="@+id/tvTime"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDOBInfo"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/time"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTimeInfo"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/age"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAgeInfo"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/weight"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWeightInfo"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/height"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvBloodGroup"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeightInfo"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/blood_group"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHobbies"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBloodGroupInfo"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/hobbies"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvEducation"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHobbiesInfo"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/education"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEducationInfo"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/language"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDOBInfo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvProfile"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/tvDOB"
            android:padding="2dp"
            android:text="@string/date_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTimeInfo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDOBInfo"
            android:layout_toEndOf="@+id/tvTime"
            android:padding="2dp"
            android:text="@string/time_info"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tvAgeInfo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTimeInfo"
            android:layout_toEndOf="@+id/tvAge"
            android:padding="2dp"
            android:text="@string/age_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgProfile"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/sara_bellum"
            android:padding="5dp"
            android:src="@drawable/profileholder"
            app:strokeColor="@color/dark_brown"
            app:strokeWidth="5dp" />

        <TextView
            android:id="@+id/tvWeightInfo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAgeInfo"
            android:layout_toEndOf="@+id/tvWeight"
            android:padding="2dp"
            android:text="@string/weight_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHeightInfo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWeightInfo"
            android:layout_toEndOf="@+id/tvHeight"
            android:padding="2dp"
            android:text="@string/height_info"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tvBloodGroupInfo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeightInfo"
            android:layout_toEndOf="@+id/tvBloodGroup"
            android:padding="2dp"
            android:text="@string/age_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHobbiesInfo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBloodGroupInfo"
            android:layout_toEndOf="@+id/tvHobbies"
            android:padding="2dp"
            android:text="@string/hobbies_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvEducationInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHobbiesInfo"
            android:layout_toEndOf="@+id/tvEducation"
            android:padding="2dp"
            android:text="@string/education_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvLanguageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEducationInfo"
            android:layout_toEndOf="@+id/tvLanguage"
            android:padding="2dp"
            android:text="@string/language_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLanguageInfo"
            android:layout_margin="5dp"
            android:background="@color/dark_brown"
            android:fontFamily="@font/hortonregular"
            android:padding="2dp"
            android:text="@string/contact"
            android:textAllCaps="true"
            android:textColor="@color/faded_yellow"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCall"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvContact"
            android:layout_marginStart="5dp"
            android:text="@string/call"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCallInfo"
            android:layout_marginStart="5dp"
            android:text="@string/address"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAddressInfo"
            android:layout_marginStart="5dp"
            android:text="@string/email"
            android:textColor="@color/dark_brown"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tvCallInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvContact"
            android:layout_toEndOf="@+id/tvCall"
            android:text="@string/phone_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAddressInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCallInfo"
            android:layout_toEndOf="@+id/tvAddress"
            android:text="@string/address_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvEmailInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAddressInfo"
            android:layout_toEndOf="@+id/tvEmail"
            android:text="@string/date_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmailInfo"
            android:layout_margin="5dp"
            android:background="@color/dark_brown"
            android:fontFamily="@font/hortonregular"
            android:padding="2dp"
            android:text="@string/about"
            android:textAllCaps="true"
            android:textColor="@color/faded_yellow"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvAboutInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAbout"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/about_details"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tvFamily"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAboutInfo"
            android:layout_margin="5dp"
            android:background="@color/dark_brown"
            android:fontFamily="@font/hortonregular"
            android:padding="2dp"
            android:text="@string/family"
            android:textAllCaps="true"
            android:textColor="@color/faded_yellow"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tvFamilyInfo"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFamily"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/family_info"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvExpectations"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFamilyInfo"
            android:layout_margin="5dp"
            android:background="@color/dark_brown"
            android:fontFamily="@font/hortonregular"
            android:padding="2dp"
            android:text="@string/expectations"
            android:textAllCaps="true"
            android:textColor="@color/faded_yellow"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvExpecationsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvExpectations"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/expectation_info"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RelativeLayout>
</ScrollView>